--- a/main.html
+++ b/main.html
@@ -9,9 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet" />
+    <!-- 기본 font : Gothic A1 -->
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap" rel="stylesheet" />
+
     <script src="https://kit.fontawesome.com/f1def33959.js" crossorigin="anonymous"></script>
-    <script src="main.js" defer></script>
+    <!-- 메뉴바 css-->
+    <link rel="stylesheet" href="./css/navbar.css" />
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
     <nav class="navbar">
@@ -20,7 +25,7 @@
         <a href="">Couple Diary</a>
       </div>
       <ul class="navbar__menu">
-        <li><a href="#">Home</a></li>
+        <li><a href="main.html">Home</a></li>
         <li><a href="#">Gallary</a></li>
         <li><a href="#">Schedule</a></li>
         <li><a href="#">Diary</a></li>
@@ -33,7 +38,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="sign_up.html">
             <i class="fas fa-user"></i>
           </a>
         </li>
