로그인 html, css, js 구현
- 실제 로그인 처리는 아직 미완성

--- a/main.html
+++ b/main.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap" rel="stylesheet" />
 
     <script src="https://kit.fontawesome.com/f1def33959.js" crossorigin="anonymous"></script>
+    <!-- reset css -->
+    <link rel="stylesheet" href="./css/reset.css" />
     <!-- 메뉴바 css-->
     <link rel="stylesheet" href="./css/navbar.css" />
     <script src="./js/main.js" defer></script>
