--- a/sign_up.html
+++ b/sign_up.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/f1def33959.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet" />
+    <!-- reset css -->
+    <link rel="stylesheet" href="./css/reset.css" />
     <!-- 메뉴바 css-->
     <link rel="stylesheet" href="./css/navbar.css" />
     <!-- 회원가입 css -->
