로그인 처리

--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
           </div>
           <!-- 여기 둥근 박스 처리하기-->
           <div id="login_form">
-            <form name="login_form" method="post" action="login.php">
+            <form name="login_form" method="post" action="./php/login.php">
               <ul>
                 <li>
                   <div id="login_form__username">ID</div>
